Fix announcement item spacing
Each announcement more clearly shown, to avoid
user confusion

--- a/styles.css
+++ b/styles.css
@@ -302,7 +302,9 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     padding: var(--navbar-gap);
+    padding-top: calc(var(--navbar-gap) + 8px);
     border-radius: 8px;
+    row-gap: 8px;
 }
 
 .announcement-item {
@@ -320,11 +322,12 @@ body {
 }
 
 .announcement-item:not(:nth-last-child(1)) {
-    padding-bottom: 12px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(82, 82, 82);
 }
-.announcement-item:not(:nth-child(1)) {
-    padding-top: 12px
+
+.announcement-item:nth-child(n + 2)
+{
+    padding-top: 8px;
 }
 
 .trending {
